--- a/tags.html
+++ b/tags.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
+<html lang="en">
+    <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
         <title>FanGhost's Blog - Tags</title>
         <meta charset="utf-8" />
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:700|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="http://FanGhost.github.io/theme/style/reset.css" type="text/css" />
+        <link rel="stylesheet" href="http://FanGhost.github.io/theme/style/screen.css" type="text/css" />
+        <link rel="stylesheet" href="http://FanGhost.github.io/theme/style/print.css" type="text/css" media="print" />
+        <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
+<body>
+    <header class="main">
+        <a class="logo" href="http://FanGhost.github.io/index.html" title="Home">FanGhost's Blog</a>
+        <span class="tagline"></span>
+    </header>
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="FanGhost.github.io/">FanGhost's Blog <strong></strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-        </ul></nav><!-- /#menu -->
-    <h1>Tags for FanGhost's Blog</h1>        <li><a href="FanGhost.github.io/tag/markdown.html">Markdown</a> (1)</li>
-        <li><a href="FanGhost.github.io/tag/pelican.html">Pelican</a> (1)</li>
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
+    <div class="container content">
+    <h1>Tags for FanGhost's Blog</h1>        <li><a href="http://FanGhost.github.io/tag/markdown.html">Markdown</a> (1)</li>
+        <li><a href="http://FanGhost.github.io/tag/pelican.html">Pelican</a> (1)</li>
+    </div>
+
+    <div class="bottom">
+        <div class="container">
+            <div class="about">
+                <h3>About me</h3>
+                <img alt="Me!" class="avatar"
+                     src="http://www.gravatar.com/avatar/?size=64">
+                <p></p>
+                <p>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container footer">
+            <span>Powered by <a href="http://docs.getpelican.com">
+                Pelican</a> using <a href="https://github.com/BYK/pelican-neat">
+                neat theme</a>.
+            </span>
+            <nav>
+                <ul>
+                    <li><a href="http://FanGhost.github.io/archives.html" title="Archive"><strong>Archive</strong></a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 </html>
